# Base_autotest

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-ocr.txt  requirements.txt
Test/: README.md  test_framework_selfcheck.py
Test/DailyMission/: test_daily_mission_example.py
Test/HeartSystem/: test_heart_system_example.py
Test/player-profile/: test_player_profile_example.py
base/: actions.py  config.py  conftest.py
base/tests/: test_actions.py  test_puzzle_smoke.py
games/demo/: game.json
pixon/: __init__.py
pixon/airtouch_fast/: utils.py  wrapper.py
pixon/common/: actions.py  adb_utils.py  autoplay_watchdog.py  config.py  log.py  ocr.py  popup_watchdog.py  sync.py  wrappers.py
pixon/custom/: __init__.py
pixon/flows/: test_flow.py
pixon/pages/: base_page.py  cheat_page.py  daily_mission.py  game_page.py  heart_system_page.py  home_page.py  lava_quest_page.py  lucky_spin.py  player_profile.py  remove_ads.py  royal_pass_page.py  setting_page.py
pixon/pages/components/: __init__.py
pixon/pages/popup/: confirm_popup.py  redeem_code_popup.py  save_progress_popup.py
scripts/: add_game.py
