[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pixon-autotest"
version = "0.1.0"
description = "Airtest+pytest automation framework for a Unity puzzle game on LDPlayer"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["pixon"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

# Architecture guard: lower layers must never import upper ones.
# Enforces the layering: Test -> flows -> pages -> common, with airtouch_fast
# and common forbidden from importing pages/flows/Test (breaks the old cycle).
[tool.importlinter]
root_package = "pixon"

[[tool.importlinter.contracts]]
name = "common and airtouch_fast must not import pages/flows"
type = "forbidden"
source_modules = ["pixon.common", "pixon.airtouch_fast"]
forbidden_modules = ["pixon.pages", "pixon.flows"]
